--- a/frontend/login.html
+++ b/frontend/login.html
@@ -17,6 +17,6 @@
     <p>Don't have an account? <a href="signup.html">Sign up here</a></p>
   </div>
 
-  <script src="script.js"></script>
+  <script src="/script.js"></script>
 </body>
 </html>
